# linux-c-programing

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: dev.yml
Lib/: CMakeLists.txt
Lib/include/: error_functions.h
Multithread_communicate/: Makefile  semaphore_share.c  share_anonymous_pipe.c  share_mem_mutex.c  share_message_queue.c  share_named_pipe.c
advance_topics/: Makefile  fork-exec.c  fork.c  getopt_long.c  mmap-read.c  mmap-write.c  pipe.c  shm.c  sigchld.c  test_file.txt  thread_create.c  thread_create2.c  tsd.c  zombie.c
client-server/: Makefile  client.c  server.c
fileio/: .ycm_extra_conf.py  CMakeLists.txt  Makefile  atomic_append.c  copy.c  custom_cp.c  custom_tee.c  dup2_custom.c  dup_custom.c  duplicate_fd.c  large_file.c  readv_writev.c  seek_append.c  seek_io.c  test_write.c
files/: file_perms.c  file_perms.h  t_stat.c
lib/: CMakeLists.txt  ename.c.inc  error_functions.c  error_functions.h  get_num.c  get_num.h  tlpi_hdr.h
lib/include/: tlpi_hdr.h  ugid_functions.h
lib/src/: error_functions.c  ugid_functions.c
memmalloc/: .ycm_extra_conf.py  Makefile  free_and_sbrk.c
memory_allocation/: CMakeLists.txt  free_and_sbrk.c
process/: CMakeLists.txt  Makefile  change_environment.c  mem_segments.c
sysinfo/: CMakeLists.txt  proc_listing.c  proc_tree.c  procfs_pidmax.c  t_uname.c
syslim/: CMakeLists.txt  t_pathconf.c  t_sysconf.c
time/: CMakeLists.txt  calendar_time.c  process_time.c  strtime.c
