add_executable(copy copy.c)
add_executable(seek_io seek_io.c)
add_executable(tee custom_tee.c)
add_executable(cp custom_cp.c)
add_executable(large_file large_file.c)
add_executable(seek_append seek_append.c)
add_executable(atomic_append atomic_append.c)
add_executable(dup dup_custom.c)
add_executable(dup2 dup2_custom.c)
add_executable(duplicate_fd duplicate_fd.c)
add_executable(test_write test_write.c)
add_executable(implement_writev readv_writev.c)
target_link_libraries(copy PRIVATE ${LIB_ERROR_HEADER})
target_link_libraries(seek_io ${LIB_ERROR_HEADER})
target_link_libraries(tee ${LIB_ERROR_HEADER})
target_link_libraries(cp ${LIB_ERROR_HEADER})
target_link_libraries(large_file ${LIB_ERROR_HEADER})
target_link_libraries(seek_append ${LIB_ERROR_HEADER})
target_link_libraries(atomic_append ${LIB_ERROR_HEADER})
target_link_libraries(dup ${LIB_ERROR_HEADER})
target_link_libraries(dup2 ${LIB_ERROR_HEADER})
target_link_libraries(duplicate_fd ${LIB_ERROR_HEADER})
target_link_libraries(test_write ${LIB_ERROR_HEADER})
target_link_libraries(implement_writev ${LIB_ERROR_HEADER})
target_compile_definitions(large_file PUBLIC _FILE_OFFSET_BITS=64)